header width seemed to be collapsing; attempting fix

--- a/resume.css
+++ b/resume.css
@@ -67,6 +67,7 @@ h1 + ul + p {
 #header {
   position: fixed;
   top: 0;
+  width: 100vw;
 }
 #pdflink,
 #homepagelink {
